--- a/html-css-intro/styles.css
+++ b/html-css-intro/styles.css
@@ -20,7 +20,7 @@ h2 {
 .aboutme {
   background-color:#b3ffff;
   text-align: center;
-  margin-bottom: 10px;
+
 }
 
 .linksClass {
@@ -32,7 +32,7 @@ h2 {
 }
 
 .button {
-  background-color:#002080;
+  background-image:linear-gradient(to bottom, #002080, lightblue);
   height: 300px;
 }
 
@@ -51,11 +51,24 @@ h2 {
   transform:translateY(-50%);
 }
 
+.btn:hover {
+  opacity: 0.5;
+}
+
+.btn:active {
+  color:black;
+}
+
 .inLineImages {
   vertical-align: middle;
   text-align: center;
   margin-left: 100px;
   margin-right: 100px;
+}
+
+.images {
+  background-image: linear-gradient(to bottom, #b3ffff, #002080 95%);
+  padding-top: 5px;
 }
 
 .copyright {
@@ -64,4 +77,51 @@ h2 {
   color:white;
   line-height: 50px;
   vertical-align: middle;
+}
+
+.flex-container {
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap:wrap;
+  flex-grow: 1;
+  width: 90%;
+  transform: translateX(5%);
+}
+
+.gallery-section {
+  background-image: linear-gradient(to bottom, lightblue, lightgray, white);
+}
+
+.owl-meme {
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
+
+.photo{
+  background-image: url("skyline-photo.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow:hidden;
+}
+
+@keyframes big {
+  50%{
+    transform: translateY(3200%);
+    transform:scale(1.5);
+  }
+}
+
+.animated-click {
+  position:relative;
+  text-align: center;
+  transform: translateY(3200%);
+  color: white;
+  transition: color 1s ease-in-out;
+}
+
+.animated-click:hover {
+  color:red;
+  animation: big 3s ease-in-out;
 }
