--- a/src/styles.css
+++ b/src/styles.css
@@ -44,24 +44,21 @@
 
 }
 
-html, body {
+html, body, div, span {
   font-size: 16;
   font-family: apple-sd-gothic-neoregular;
   max-width: 100%;
   height: 100%;
   overflow-x: hidden;
+  margin:0;
+  text-align: center;
 }
 
-.full-page-background {
-  position:fixed;
+.full-page-background img{
+  position: fixed;
+  width: 100%;
   height:100%;
-  width:100%;
-  background-image: url("seattle-skyline.JPG");
-  background-size: cover;
-}
-
-html, body {
-  background:rgba(0,0,0,0.45);
+  left:-0%;
 }
 
 
@@ -71,9 +68,29 @@ html, body {
   color:white;
 }
 
-header {
-  width:100%;
+.about-nav, .contact-nav {
+  background-color: #333;
+  text-align: center;
 }
+
+.pageheader {
+  background: rgba(0,0,0,0.25);
+  position: fixed;
+  top:0;
+  width: 100%;
+}
+
+
+.index-footer {
+  background: rgba(0,0,0,0.4);
+}
+
+
+.about-footer-container, .contact-footer-container, .about-nav, .contact-nav {
+  background-color: #333;
+  text-align: center;
+}
+
 nav {
   overflow: hidden;
   position: relative;
@@ -81,25 +98,53 @@ nav {
   width:100%;
 }
 
+.index-footer {
+  overflow: hidden;
+  position: fixed;
+  bottom:0;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+}
+
 footer {
   overflow: hidden;
   position: fixed;
   bottom:0;
   width: 100%;
-  padding-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom:10px;
+}
+
+.about-footer, .contact-footer {
+  overflow: hidden;
+  position: fixed;
+  bottom:0;
+  width: 100%;
+  background-color: #333;
+  text-align: center;
 }
 
 nav a {
   font-size: 1.5em;
-  height: 50px;
-  line-height: 50px;
+  height: 64px;
+  line-height: 64px;
   padding-left: 50px;
   padding-right: 50px;
+  text-shadow:
+  -0.5px -0.5px 0 #000,
+  0.5px -0.5px 0 #000,
+  -0.5px 0.5px 0 #000,
+  0.5px 0.5px 0 #000;
+  cursor:pointer;
+  transition: all 0.3s ease;
 }
 
 footer a {
   padding-left: 12px;
   padding-right: 12px;
+  transition: all 0.3s ease;
 }
 
 
@@ -113,30 +158,29 @@ a:visited {
   text-decoration: none;
 }
 
-a:hover {
-  cursor:pointer;
-  color:#FFD700;
+footer a:hover {
+  color:black;
   text-decoration: none;
-  transition: all 0.3s ease;
+}
+
+a:hover {
+  color:lightgrey;
+  text-decoration: none;
 }
 
 a:active {
-  color:#FFD700;
+  color:black;
   text-decoration: none;
 }
 
-.nav-flex-container {
-  /* display: flex; */
-  justify-content: space-between;
-  align-items: center;
-  width:100%;
-  margin-bottom: 10px;
-}
-
-.footer-flex-container {
+.footer-container {
   justify-content:space-around;
   align-items: center;
   width:100%;
+}
+
+.center-container {
+  margin-top: 64px;
 }
 
 .fab {
@@ -152,10 +196,6 @@ a:active {
   text-decoration: none;
   color: black;
   transition: all 0.5s ease;
-}
-
-.social-link:hover {
-  cursor:pointer;
 }
 
 .fa-instagram {
@@ -174,15 +214,19 @@ a:active {
 }
 
 h1 {
-  font-size: 1.6em;
+  font-size: 1.7em;
+  transition: all 0.5s ease;
+  color:black;
 }
 
 h2 {
-  font-size:1.3em;
+  font-size:1.5em;
+  /* transition: all 0.5s ease; */
 }
 
 h3 {
-  font-size: 1.15;
+  font-size: 1.3;
+  /* transition: all 0.5s ease; */
 }
 
 @keyframes fadein {
@@ -215,41 +259,117 @@ h3 {
 }
 
 .text-container {
-  margin-left: 75px;
-  margin-right: 75px;
-  margin-bottom: 50px;
+  margin-left: 160px;
+  margin-right: 160px;
+  margin-top: 40px;
   opacity:0;
-  -webkit-animation: fadein 1s 0.3s forwards; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 1s 0.3s forwards; /* Firefox < 16 */
-  -ms-animation: fadein 1s 0.3s forwards; /* Internet Explorer */
-  -o-animation: fadein 1s 0.3s forwards; /* Opera < 12.1 */
-  animation: fadein 1s 0.3s forwards;
+  -webkit-animation: fadein 2.5s 1s forwards; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2.5s 1s forwards; /* Firefox < 16 */
+  -ms-animation: fadein 2.5s 1s forwards; /* Internet Explorer */
+  -o-animation: fadein 2.5s 1s forwards; /* Opera < 12.1 */
+  animation: fadein 2.5s 1s forwards;
   transition: all 0.5s ease;
+  line-height: 42px;
+  letter-spacing: normal;
+  text-shadow:
+  -1px -1px 0 #ffffff,
+  1px -1px 0 #ffffff,
+  -1px 1px 0 #ffffff,
+  1px 1px 0 #ffffff;
 }
 
 .title-container {
   padding-left: 75px;
   padding-right: 75px;
-  margin-top: 155px;
+  margin-top: 255px;
   opacity: 0;
-  -webkit-animation: fadein 2s 3s forwards; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 2s 3s forwards; /* Firefox < 16 */
-  -ms-animation: fadein 2s 3s forwards; /* Internet Explorer */
-  -o-animation: fadein 2s 3s forwards; /* Opera < 12.1 */
-  animation: fadein 2s 3s forwards;
+  -webkit-animation: fadein 3s 3.5s forwards; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 3s 3.5s forwards; /* Firefox < 16 */
+  -ms-animation: fadein 3s 3.5s forwards; /* Internet Explorer */
+  -o-animation: fadein 3s 3.5s forwards; /* Opera < 12.1 */
+  animation: fadein 3s 3.5s forwards;
   transition: all 0.5s ease;
+  text-shadow:
+  -1px -1px 0 #000,
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+  1px 1px 0 #000;
 }
 
 .title {
   padding: 5px;
 }
 
-.title-container:hover {
-  text-decoration: none;
-  color:#FFD700;
+.text-container:hover {
+  transform: scale(1.025);
 }
 
-.text-container:hover {
-  text-decoration: none;
-  color:#FFD700;
+.title-container:hover {
+  transform: scale(1.05);
+}
+
+.title-container a:hover {
+  color:#fff;
+}
+
+@media all and (max-width:767px) {
+
+}
+
+.firstplaximg, .secondplaximg {
+  position: relative;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.firstplaximg {
+  background-image: url("images/mountains-boardwalk.jpeg");
+  min-height: 100%;
+}
+
+.secondplaximg {
+  background-image: url("images/work-desk.jpeg");
+  min-height: 400px;
+}
+
+.caption {
+  position: absolute;
+  left: 0;
+  top: 37%;
+  width: 100%;
+  text-align: center;
+  color: #a7adba;
+}
+
+.caption span.border {
+  opacity: 0.94;
+  color: #fff;
+  font-size: 1.5em;
+  line-height: 60px;
+  padding: 16px;
+  letter-spacing: 2px;
+  text-shadow:
+  -1px -1px 0 #000,
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+  1px 1px 0 #000;
+}
+
+.whoamibio h2 {
+  color:black;
+  text-align: center;
+}
+
+.whoamibio {
+  height: 300px;
+}
+
+.whoamibio, .whoamibio p {
+  color:#777;
+  text-align: center;
+  text-align: justify;
+  padding:40px 80px;
+  line-height: 30px;
 }
