--- a/src/styles.css
+++ b/src/styles.css
@@ -49,7 +49,7 @@ html, body, div, span {
   font-family: apple-sd-gothic-neoregular;
   max-width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   margin:0;
   text-align: center;
 }
@@ -78,6 +78,7 @@ html, body, div, span {
   position: fixed;
   top:0;
   width: 100%;
+  z-index:1;
 }
 
 
@@ -87,29 +88,25 @@ html, body, div, span {
 
 
 .about-footer-container, .contact-footer-container, .about-nav, .contact-nav {
+  overflow: hidden;
   background-color: #333;
   text-align: center;
 }
 
 nav {
-  overflow: hidden;
   position: relative;
   top:0;
   width:100%;
 }
 
 .index-footer {
-  overflow: hidden;
   position: fixed;
   bottom:0;
   width: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
-
+  height:64px;
 }
 
 footer {
-  overflow: hidden;
   position: fixed;
   bottom:0;
   width: 100%;
@@ -118,7 +115,6 @@ footer {
 }
 
 .about-footer, .contact-footer {
-  overflow: hidden;
   position: fixed;
   bottom:0;
   width: 100%;
@@ -147,7 +143,6 @@ footer a {
   transition: all 0.3s ease;
 }
 
-
 a:link {
   color: white;
   text-decoration: none;
@@ -165,6 +160,7 @@ footer a:hover {
 
 a:hover {
   color:lightgrey;
+  cursor: pointer;
   text-decoration: none;
 }
 
@@ -174,6 +170,7 @@ a:active {
 }
 
 .footer-container {
+  overflow: hidden;
   justify-content:space-around;
   align-items: center;
   width:100%;
@@ -181,6 +178,7 @@ a:active {
 
 .center-container {
   margin-top: 64px;
+  overflow-y: scroll;
 }
 
 .fab {
@@ -217,16 +215,18 @@ h1 {
   font-size: 1.7em;
   transition: all 0.5s ease;
   color:black;
+  cursor: default;
 }
 
 h2 {
   font-size:1.5em;
-  /* transition: all 0.5s ease; */
+  transition: all 0.5s ease;
 }
 
 h3 {
-  font-size: 1.3;
-  /* transition: all 0.5s ease; */
+  font-size: 1.3em;
+  padding: 5px;
+  transition: all 0.5s ease;
 }
 
 @keyframes fadein {
@@ -261,7 +261,8 @@ h3 {
 .text-container {
   margin-left: 160px;
   margin-right: 160px;
-  margin-top: 40px;
+  margin-top: 30px;
+  overflow: hidden;
   opacity:0;
   -webkit-animation: fadein 2.5s 1s forwards; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 2.5s 1s forwards; /* Firefox < 16 */
@@ -279,15 +280,14 @@ h3 {
 }
 
 .title-container {
-  padding-left: 75px;
-  padding-right: 75px;
-  margin-top: 255px;
+  margin-top: 265px;
   opacity: 0;
-  -webkit-animation: fadein 3s 3.5s forwards; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 3s 3.5s forwards; /* Firefox < 16 */
-  -ms-animation: fadein 3s 3.5s forwards; /* Internet Explorer */
-  -o-animation: fadein 3s 3.5s forwards; /* Opera < 12.1 */
-  animation: fadein 3s 3.5s forwards;
+  overflow: hidden;
+  -webkit-animation: fadein 3s 6.5s forwards; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 3s 6.5s forwards; /* Firefox < 16 */
+  -ms-animation: fadein 3s 6.5s forwards; /* Internet Explorer */
+  -o-animation: fadein 3s 6.5s forwards; /* Opera < 12.1 */
+  animation: fadein 3s 6.5s forwards;
   transition: all 0.5s ease;
   text-shadow:
   -1px -1px 0 #000,
@@ -296,28 +296,39 @@ h3 {
   1px 1px 0 #000;
 }
 
-.title {
-  padding: 5px;
-}
-
-.text-container:hover {
-  transform: scale(1.025);
-}
-
 .title-container:hover {
-  transform: scale(1.05);
+  transform: scale(1.07);
 }
 
 .title-container a:hover {
   color:#fff;
 }
 
-@media all and (max-width:767px) {
-
+.title2 {
+  display: none;
 }
 
-.firstplaximg, .secondplaximg {
+#link-title {
+  transition: all 0.5s ease;
+  padding:5px;
+  height: 20%;
   position: relative;
+  top:10%;
+  display: inline-block;
+  -webkit-animation: none; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: none; /* Firefox < 16 */
+  -ms-animation: none; /* Internet Explorer */
+  -o-animation: none; /* Opera < 12.1 */
+  animation: none;
+}
+
+#link-title:hover {
+  transform: scale(1.1);
+}
+
+.firstplaximg, .secondplaximg, .thirdplaximg, .bottomplaximg, .contactimg {
+  position: relative;
+  overflow: hidden;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -334,27 +345,81 @@ h3 {
   min-height: 400px;
 }
 
+.thirdplaximg {
+  background-image: url("images/personal-desk.jpeg");
+  min-height: 400px;
+}
+
+.bottomplaximg {
+  background-image: url("images/bw-mountain.jpeg");
+  min-height: 400px;
+}
+
+.contactimg {
+  background-image: url("images/cows-and-landscape.jpeg");
+  min-height: 100%;
+  opacity: 0.915;
+}
+
 .caption {
   position: absolute;
+  overflow: hidden;
   left: 0;
-  top: 37%;
+  top: 23%;
   width: 100%;
   text-align: center;
   color: #a7adba;
+  opacity:0;
+  -webkit-animation: fadein 3.5s 1s forwards; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 3.5s 1s forwards; /* Firefox < 16 */
+  -ms-animation: fadein 3.5s 1s forwards; /* Internet Explorer */
+  -o-animation: fadein 3.5s 1s forwards; /* Opera < 12.1 */
+  animation: fadein 3.5s 1s forwards;
+  transition: all 0.5s ease;
 }
 
-.caption span.border {
-  opacity: 0.94;
+.caption2 {
+  position: absolute;
+  overflow: hidden;
+  left: 0;
+  top: 42.5%;
+  width: 100%;
+  text-align: center;
+  text-shadow:
+  -1px -1px 0 #fff,
+  1px -1px 0 #fff,
+  -1px 1px 0 #fff,
+  1px 1px 0 #fff;
+}
+
+.caption span.container-title {
   color: #fff;
   font-size: 1.5em;
+  overflow: hidden;
   line-height: 60px;
   padding: 16px;
   letter-spacing: 2px;
+  transition: all 0.5s ease;
+  display:inline-block;
   text-shadow:
   -1px -1px 0 #000,
   1px -1px 0 #000,
   -1px 1px 0 #000,
   1px 1px 0 #000;
+}
+
+#hobbiesid {
+  top:25%;
+}
+
+.secondplaximg span, .thirdplaximg span {
+  font-size: 1.5em;
+  color:#000;
+}
+
+.bottomplaximg a {
+  vertical-align: middle;
+  transition: all 0.5s ease;
 }
 
 .whoamibio h2 {
@@ -366,10 +431,248 @@ h3 {
   height: 300px;
 }
 
+.projects-and-past-work {
+  height: 500px;
+}
+
+.hobbies {
+  height: 450px;
+}
+
 .whoamibio, .whoamibio p {
   color:#777;
   text-align: center;
   text-align: justify;
   padding:40px 80px;
   line-height: 30px;
+}
+
+#h2-title {
+  font-size: 1em;
+}
+
+#formtitle {
+  color: #000;
+  font-size: 1.9em;
+  line-height: 1.5em;
+  padding: 16px;
+  letter-spacing: 2px;
+  transition: all 0.5s ease;
+  display:inline-block;
+  text-shadow:
+  -0.6px -0.6px 0 #fff,
+  0.6px -0.6px 0 #fff,
+  -0.6px 0.6px 0 #fff,
+  0.6px 0.6px 0 #fff;
+  height:11%;
+}
+
+#formmsg {
+  font-size: 0.85em;
+}
+
+.inputs-container {
+  height:100%;
+}
+
+.contact-div {
+  text-align: center;
+}
+
+label, .contact-div {
+  color:#fff;
+  display:block;
+  padding: 8px;
+  line-height: 21.5px;
+  vertical-align: middle;
+  transition: all 0.5s ease;
+  text-shadow:
+  -0.8px -0.8px 0 #000,
+  0.8px -0.8px 0 #000,
+  -0.8px 0.8px 0 #000,
+  0.8px 0.8px 0 #000;
+}
+
+input, textarea {
+  width:100%;
+  box-sizing: border-box;
+  border: 1px #000 solid;
+  border-radius: 3px;
+  padding: 8px;
+  transition: all 0.5s ease;
+}
+
+textarea {
+  font-family: apple-sd-gothic-neoregular;
+  font-size: 0.8em;
+  height:150px;
+  resize: none;
+  transition: all 0.5s ease;
+}
+
+input[type="submit"] {
+  width:auto;
+  padding:10px 20px;
+  margin-top: 10px;
+  cursor:pointer;
+  transition: all 0.4s ease;
+}
+
+input[type="submit"]:hover {
+  color: #00001a;
+  background: lightgray;
+}
+
+input:focus, select:focus, textarea:focus {
+  outline:none;
+  border: 2px #f5821f solid;
+}
+
+input::placeholder, textarea::placeholder {
+  color: #00001a;
+}
+
+.contactform {
+  opacity: 0;
+  -webkit-animation: fadein 2.5s 1s forwards; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2.5s 1s forwards; /* Firefox < 16 */
+  -ms-animation: fadein 2.5s 1s forwards; /* Internet Explorer */
+  -o-animation: fadein 2.5s 1s forwards; /* Opera < 12.1 */
+  animation: fadein 2.5s 1s forwards;
+  transition: all 0.5s ease;
+}
+
+.forminputs {
+  opacity: 0;
+  margin: 0 auto;
+  text-align: center;
+  max-width: 330px;
+  -webkit-animation: fadein 4s 3s forwards; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 4s 3s forwards; /* Firefox < 16 */
+  -ms-animation: fadein 4s 3s forwards; /* Internet Explorer */
+  -o-animation: fadein 4s 3s forwards; /* Opera < 12.1 */
+  animation: fadein 4s 3s forwards;
+  transition: all 0.5s ;
+  transition-timing-function: ease-in;
+}
+
+.userinput {
+  max-width: 271px;
+ }
+
+@media all and (max-width:1024px) {
+
+  .text-container {
+    margin-top: 60px;
+    margin-left: 70px;
+    margin-right:70px;
+    line-height: 40px;
+  }
+
+  h2 {
+    font-size: 1.175em;
+  }
+
+  #h2-title {
+    font-size: 0.92em;
+    margin-top: 10px;
+  }
+
+  .title1 {
+    display: none;
+  }
+
+  .title2 {
+    display: block;
+  }
+
+  .title-container {
+    margin-top: 100px;
+  }
+
+  .caption {
+    top:25%;
+  }
+
+}
+
+@media all and (max-width:767px) {
+  nav a {
+    font-size: 1.25em;
+    display: inline-block;
+    padding-left: 5%;
+    padding-right: 5%;
+    height: 48px;
+    line-height: 48px;
+  }
+
+  footer {
+    height:48px;
+    line-height: 48px;
+  }
+
+
+  .fab {
+    padding: 15px;
+    width: 18px;
+    font-size: 18px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+  }
+
+  h1 {
+    font-size: 1.2em;
+  }
+
+  h2 {
+    font-size: 1.175em;
+  }
+
+  h3 {
+    font-size: 1.1em;
+  }
+
+  .text-container {
+    line-height: 35px;
+    letter-spacing: 1px;
+    margin-top: 25px;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+
+  .title-container {
+    margin-top: 170px;
+  }
+
+  .title1 {
+    display: none;
+  }
+
+  .title2 {
+    display: block;
+  }
+
+  .center-container {
+    margin-top: 48px;
+  }
+
+  .caption span.container-title {
+    font-size: 1.25em;
+    line-height: 30px;
+  }
+
+  #h2-title {
+    font-size: 0.92em;
+    margin-top: 10px;
+  }
+
+  .whoamibio, .whoamibio p {
+    padding: 20px 12px;
+    margin-bottom: 16px;
+  }
+
+  .secondplaximg span, .thirdplaximg span {
+    font-size: 1.32em;
+  }
 }
