progressing on final

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,36 +1,3 @@
-@font-face {
-    font-family: 'merriweatherregular';
-    src: url('fonts/merriweather-regular-webfont.eot');
-    src: url('fonts/merriweather-regular-webfont.eot?#iefix') format('embedded-opentype'),
-        url('fonts/merriweather-regular-webfont.woff2') format('woff2'),
-         url('fonts/merriweather-regular-webfont.woff') format('woff'),
-         url('fonts/merriweather-regular.ttf') format('ttf');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'latoregular';
-    src: url('fonts/lato-regular-webfont.eot');
-    src: url('fonts/lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/lato-regular-webfont.woff2') format('woff2'),
-         url('fonts/lato-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'opensansregular';
-    src: url('fonts/opensans-regular-webfont.eot');
-    src: url('fonts/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/opensans-regular-webfont.woff2') format('woff2'),
-         url('fonts/opensans-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
 
 @font-face {
     font-family: 'apple-sd-gothic-neoregular';
@@ -52,6 +19,11 @@ html, body, div, span {
   overflow: hidden;
   margin:0;
   text-align: center;
+}
+
+img {
+  height:250px;
+  width: auto;
 }
 
 .full-page-background img{
@@ -181,6 +153,11 @@ a:active {
   overflow-y: scroll;
 }
 
+#quotecontainer {
+  background: linear-gradient(to left top, black, gold);
+
+}
+
 .fab {
   padding: 20px;
   width: 24px;
@@ -214,8 +191,24 @@ a:active {
 h1 {
   font-size: 1.7em;
   transition: all 0.5s ease;
-  color:black;
+  color:white;
   cursor: default;
+  padding: 10px;
+  text-shadow:
+  -1px -1px 0 #000,
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+  1px 1px 0 #000;
+}
+
+#submitdiv {
+  height: 67px;
+  width: 100%;
+}
+
+#map {
+  height: 400px;
+  width: 400px;
 }
 
 h2 {
@@ -502,6 +495,11 @@ input, textarea {
   transition: all 0.5s ease;
 }
 
+select {
+  width:inherit;
+  margin: 10px;
+}
+
 textarea {
   font-family: apple-sd-gothic-neoregular;
   font-size: 0.8em;
@@ -523,7 +521,7 @@ input[type="submit"]:hover {
   background: lightgray;
 }
 
-input:focus, select:focus, textarea:focus {
+input:focus, textarea:focus {
   outline:none;
   border: 2px #f5821f solid;
 }
@@ -623,6 +621,11 @@ input::placeholder, textarea::placeholder {
 
   h1 {
     font-size: 1.2em;
+    text-shadow:
+    -1px -1px 0 #D4AF37,
+    1px -1px 0 #D4AF37,
+    -1px 1px 0 #D4AF37,
+    1px 1px 0 #D4AF37;
   }
 
   h2 {
