--- a/src/styles.css
+++ b/src/styles.css
@@ -14,11 +14,15 @@
 html, body, div, span {
   font-size: 16;
   font-family: apple-sd-gothic-neoregular;
-  max-width: 100%;
-  height: 100%;
-  overflow: hidden;
   margin:0;
   text-align: center;
+}
+
+.about-center-container, div.firstplaximg {
+height: 100%;
+overflow: hidden;
+margin-top: 64px;
+overflow-y: scroll;
 }
 
 img {
@@ -155,7 +159,8 @@ a:active {
 
 #quotecontainer {
   background: linear-gradient(to left top, black, gold);
-
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .fab {
@@ -207,8 +212,17 @@ h1 {
 }
 
 #map {
-  height: 400px;
-  width: 400px;
+  height: 100%;
+  width: 100%;
+  max-width: none;
+  overflow-x:hidden;
+  overflow-y: hidden;
+}
+
+#mapinfo {
+  margin-top:64px;
+  color:black;
+  background-color: lightgray;
 }
 
 h2 {
@@ -538,6 +552,7 @@ input::placeholder, textarea::placeholder {
   -o-animation: fadein 2.5s 1s forwards; /* Opera < 12.1 */
   animation: fadein 2.5s 1s forwards;
   transition: all 0.5s ease;
+  overflow-y: scroll;
 }
 
 .forminputs {
